# SimpleBench

./: .autosrc  .gitignore  .releaserc.json  CHANGELOG.md  Cargo.toml  LICENSE_MIT  README.md  flake.nix
.claude/: hanging-analysis.md  simplebench-setup-performance-bug-report.md
.claude/baseline-comparison-method/: implementation_plan.md  proposal.md  research_findings.md
.claude/bench-profile-standardization/: implementation_plan.md
.claude/cfg-test-conditional-compilation/: implementation_plan.md
.claude/cli-development/: Phase3_investigation.md  Phase3_research_results.md  implementation_plan.md  simplebench_research.md
.claude/dev-dependency-support/: implementation_plan.md  proof_of_concept.sh
.claude/measurement-simplification/: plan.md
.claude/open-source-release/: implementation_plan.md  research.md
.claude/parallel-execution/: implementation_plan.md  research.md
.claude/progress-feedback/: implementation_plan.md  research.md
.claude/reproducible-regression/: criterion_warmup_research.md  implementation_plan.md  investigation.md  summary.md
.claude/setup-separation/: implementation_plan.md
.claude/submodule-benchmark-discovery-bug/: investigation_report.md
.claude/variance-reduction/: critical_notes.md  historical_data_plan.md  implementation_plan.md  implementation_plan_initial.md  iqr_outlier_filtering_plan.md  research.md  review_final.md  review_initial.md
.github/workflows/: ci.yml  release.yml
cargo-simplebench/: Cargo.toml
cargo-simplebench/src/: analyze.rs  compile.rs  main.rs  metadata.rs  output.rs  progress.rs  rlib_selection.rs  runner_gen.rs  topology.rs
simplebench-macros/: Cargo.toml
simplebench-macros/src/: lib.rs
simplebench-macros/tests/: integration_test.rs
simplebench-runtime/: Cargo.toml
simplebench-runtime/src/: baseline.rs  changepoint.rs  config.rs  cpu_analysis.rs  cpu_monitor.rs  lib.rs  measurement.rs  output.rs  progress.rs  statistics.rs
test-workspace/: Cargo.toml  runner.rs
test-workspace/game-entities/: Cargo.toml
test-workspace/game-entities/src/: lib.rs
test-workspace/game-math/: Cargo.toml
test-workspace/game-math/src/: lib.rs
test-workspace/game-physics/: Cargo.toml
test-workspace/game-physics/src/: lib.rs
test-workspace/test-runner/: Cargo.toml
test-workspace/test-runner/src/: main.rs
tools/: bump-versions.sh
