[workspace]
members = [
    "simplebench-runtime",
    "simplebench-macros",
    "cargo-simplebench",
]

resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
repository = "https://github.com/CmPons/simplebench"
authors = ["CmPons", "Claude <noreply@anthropic.com>"]
rust-version = "1.70"

[profile.bench]
opt-level = 3
debug = false
debug-assertions = false
overflow-checks = false
lto = false
incremental = false
codegen-units = 16
