[package]
name = "cargo-simplebench"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "cargo-simplebench"
path = "src/main.rs"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
cargo_metadata = "0.18"
colored = "2.0"
clap = { version = "4.5", features = ["derive"] }
simplebench-runtime = { path = "../simplebench-runtime" }
