[package]
name = "cargo-simplebench"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
rust-version.workspace = true
description = "CLI tool for SimpleBench - run benchmarks across workspace crates"
readme = "../README.md"
keywords = ["benchmark", "cargo", "cli", "performance"]
categories = ["development-tools::cargo-plugins", "command-line-utilities"]

[[bin]]
name = "cargo-simplebench"
path = "src/main.rs"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
cargo_metadata = "0.18"
colored = "2.0"
clap = { version = "4.5", features = ["derive"] }
simplebench-runtime.workspace = true
