[package]
name = "simplebench-runtime"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
inventory = "0.3"
colored = "2.0"
chrono = { version = "0.4", features = ["serde"] }
default-net = "0.22"
sha2 = "0.10"
toml = "0.8"

[dev-dependencies]
tempfile = "3.0"