[package]
name = "simplebench-runtime"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
rust-version.workspace = true
description = "Core runtime library for SimpleBench - a minimalist microbenchmarking framework"
readme = "../README.md"
keywords = ["benchmark", "performance", "testing", "profiling"]
categories = ["development-tools::profiling", "development-tools::testing"]

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
inventory = "0.3"
colored = "2.0"
chrono = { version = "0.4", features = ["serde"] }
default-net = "0.22"
sha2 = "0.10"
toml = "0.8"
affinity = "0.1.2"

[dev-dependencies]
tempfile = "3.0"
